--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="icon" href="img/DD-logo.png" type="image/gif" sizes="20x20">
+    <link rel="icon" href="./DD-logo.png" type="image/gif" sizes="20x20">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Daily Diet App</title>
   </head>
   <body>
     <noscript>
